feat: let the PO ask for an ask to be put in plain words
